--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.SignInActivity"></activity>
-        <activity android:name=".ui.SplashScreenActivity">
+        <activity android:name=".ui.HomePageActivity"></activity>
+        <activity android:name=".ui.SigninActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
